fix spacing, move contact info, move phone/email on profile page

--- a/css/styles.css
+++ b/css/styles.css
@@ -153,6 +153,11 @@
 	margin: 1%;
 }
 
+.col-profile {
+	flex: 1;
+	margin-left: 3%;
+}
+
 .col-small {
 	flex: 0.3;
 }
@@ -592,10 +597,23 @@
 	text-decoration: none;
 }
 
+.pro-questions {
+	font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
+    text-align: left;
+    font-size: 16px;
+    line-height: 180%;
+    word-wrap: break-word;
+    padding-left: 2%
+}
 
 .profile {
 	display: flex;
 	margin-left: 5%;
+}
+
+.profile-pic {
+	height: 400px;
+	width: 300px;
 }
 
 .questions {
